# azah

./: .gitignore  README.md
dev/: CMakeLists.txt
dev/src/: CMakeLists.txt  main.cc
dev/src/async/: gateway.cc  gateway.h  semaphor.h  semaphore.cc  semaphore.h  work_queue.cc  work_queue.h  work_queue_test.cc
dev/src/games/: coroutine.h  game.h  game_network.cc  game_network.h
dev/src/games/ignoble/: ignoble4.cc  ignoble4.h  ignoble4_network.cc  ignoble4_network.h
dev/src/games/mancala/: mancala.cc  mancala.h  mancala_network.cc  mancala_network.h
dev/src/games/tictactoe/: model.cc  model.h  tictactoe.cc  tictactoe.h  tictactoe_network.cc  tictactoe_network.h
dev/src/io/: serializable.h  stopwatch.cc  stopwatch.h
dev/src/mcts/: callbacks.h  game_network_work_item.h  lock_by_key.h  network_dispatch_queue.h  network_work_item.h  playout_runner.h  rl_player.h  self_play.h  self_player.h  state_cache.h  visit_table.h  work_queue.h
dev/src/model/: test_mix_mlp.h
dev/src/nn/: activation.cc  activation.h  activation_test.cc  adam.cc  adam.h  binary_op.h  builder.cc  builder.h  constant.h  constant_base.h  core.h  data_types.h  graph.cc  graph.h  init.h  network.cc  network.h  node.h  node_base.h  op.h  sgd_optimizer.h  unary_op.h  variable.h  variable_base.h
dev/src/nn/graph/: builder.cc  builder.h
dev/src/nn/op/: add.h  broadcast_add.h  broadcast_matmul.h  concat.h  concat_cols.h  fmadd.h  fork.h  group.h  group_matmul.h  group_norm.h  layer_norm.h  matmul.h  mean.h  mixer.h  mse.h  multiply.h  row_mean.h  scalar_fmadd.h  scalar_inv_sqrt.h  scalar_mse.h  scalar_sub.h  sigmoid.h  softmax.h  softmax_cross_ent.h  square_mean.h  swish.cc  swish.h  tanh.h  transpose.h  ungroup.h  z_score.h
dev/src/thread/: dispatch_queue.cc  dispatch_queue.h  gateway.cc  gateway.h  semaphore.cc  semaphore.h
dev/src/util/: noncopyable.h  random.cc  random.h
doc/: azah.txt
